# automated_ncs_benchmark

./: README.md
3d-printable-parts/: cable_tower.scad  cable_tower.stl  corner_profile_mount.scad  corner_profile_mount.stl  endstop_mount.scad  endstop_mount.stl  idler_mount.scad  idler_mount.stl  pcb_distance.scad  pcb_distance.stl  rod_attachment.scad  rod_attachment.stl  sail.scad  sail_10x10.stl  sail_14x14.stl  sail_17x17.stl  sensor_mount.scad  sensor_mount.stl  sensor_mount_cable_guide.stl
IST/: KalmanFilter.m  LQR_with_delay.m  LQR_with_delay2.m  Readme how to install matlab.txt  kalman-filter_lqr_doku.md  lqr-with-delay_writeup.md  neuerVersuch.m  pendulum_receiver1_IST.ino
PCB-Design/kicad_pendulum_receiver1/: fp-info-cache  fp-lib-table  kicad_pendulum_receiver1.kicad_pcb  kicad_pendulum_receiver1.kicad_prl  kicad_pendulum_receiver1.kicad_pro  kicad_pendulum_receiver1.kicad_sch  sym-lib-table
PCB-Design/kicad_pendulum_sender1/: fp-info-cache  fp-lib-table  kicad_pendulum_sender1.kicad_pcb  kicad_pendulum_sender1.kicad_prl  kicad_pendulum_sender1.kicad_pro  kicad_pendulum_sender1.kicad_sch
carabelli-parameter-calculation/: J_results_p001-02.jl  PlantModels.jl  demonstrator-multi-period.jl  demonstrator.jl  notifytest.jl  params.jl  quarts.ipynb  replication-quality.ipynb  replication.jl  scenarios.jl
carabelli-parameter-calculation/data/: evals.jl  shortexperiment-quarts.txt  shortexperiment-replication.txt
carabelli-parameter-calculation/demonstrator/: PendulumMessage.jl  eval-replication.jl  eval.jl  pendulum_pb.jl  sensor-proc-demo.jl  teensy_serial.jl
carabelli-parameter-calculation/eval/: fourtank_diffeq.jl  qoc_plots.jl  reshape_jld.jl
carabelli-parameter-calculation/models/: Simple2D.jl  powersystem-matrices.jl
carabelli-parameter-calculation/quarts-sim/: QuartsSim.jl  load-sim.jl  quarts-sim.jl
carabelli-parameter-calculation/replication-sim/: ReplicationSim.jl  load-sim.jl  performance-plots.ipynb  sim.jl  simdata.jl
carabelli-parameter-calculation/sim-common/: NCSReplicationCommon.jl  actuator-proc.jl  degenerate-distribution.jl  (+8 more)
kalman-and-mlqr-parameter-calculation/: LQRUtils.jl  demonstrator-multi-period.jl
network-config/: 01-sender-netplan-config.yaml  01-switch-netplan-config.yaml  README.md  configure-banana-pi.sh  configure-pen1-receiver.sh  configure-pen1-sender.sh  configure-pen2-receiver.sh  configure-pen2-sender.sh  configure-pen3-receiver.sh  configure-pen3-sender.sh  configure-switch.sh  setup-receiver.sh  setup-switch.sh
pendulum_characteristics_analysis/: README.md  analyze_trace.py  pendulum1_sail10.csv  pendulum1_sail10_2.csv  teensy_encoder_log.sh
scheduling-switch-config/: prio_real-cross-traffic.sh  prio_simulated-cross-traffic.sh  setup-queue-length.sh
sender-receiver-linux/: CMakeLists.txt  README.md  exampleReceiverConfig.json  exampleSenderConfig.json
sender-receiver-linux/Config/: exampleReceiverConfig.json  exampleSenderConfig.json  exampleSenderSequenceConfig.json  receiver_1_iqc.json  receiver_1_robustio.json  sender_dptb01.json  sender_dptb012.json  sender_dptb0123.json  sender_dptb4prio.json  sender_reg+dptb012.json  sender_reg+dptb01234.json  sender_reg0.json  sender_reg1.json  sender_reg2.json  sender_reg3.json  sender_reg4.json  sender_reg5.json  sender_reg6.json
sender-receiver-linux/CrossTraffic/: CrossTrafficMain.cpp  CrossTrafficSender.cpp  CrossTrafficSender.h  CrossTrafficSenderOrchestrator.cpp  CrossTrafficSenderOrchestrator.h
sender-receiver-linux/Logging/: CrossTrafficLogger.cpp  CrossTrafficLogger.h  Logger.cpp  Logger.h  PendulumLogger.cpp  PendulumLogger.h
sender-receiver-linux/Logging/LogEntries/: ActuatorLogEntry.cpp  ActuatorLogEntry.h  LogEntry.cpp  LogEntry.h  PauseLogEntry.cpp  PauseLogEntry.h  PendulumLogEntry.cpp  PendulumLogEntry.h  SenderFeedbackLogEntry.cpp  SenderFeedbackLogEntry.h
sender-receiver-linux/Logging/LogEntries/SchedulingInfoEntries/: ConstantPrioInfoEntry.cpp  ConstantPrioInfoEntry.h  SchedulingInfoEntry.h  TokenBucketInfoEntry.cpp  TokenBucketInfoEntry.h
sender-receiver-linux/Parameters/: Parameters.h
sender-receiver-linux/PendulumReceiverSide/: PendulumReceiver.cpp  PendulumReceiver.h  PendulumReceiverMain.cpp  ReceiverConfig.cpp  ReceiverConfig.h
sender-receiver-linux/PendulumSenderSide/: MPTBSubConfig.cpp  MPTBSubConfig.h  PendulumSender.cpp  PendulumSender.h  PendulumSenderMain.cpp  SenderConfig.cpp  SenderConfig.h  SenderMultiConfig.cpp  SenderMultiConfig.h
sender-receiver-linux/Scheduling/: ConstantPriority.cpp  ConstantPriority.h  MultiPriorityTokenBucket.cpp  MultiPriorityTokenBucket.h  PriorityDeterminer.cpp  PriorityDeterminer.h  TokenBucket.cpp  TokenBucket.hpp
sender-receiver-linux/SerialPortScan/: TeensyPortDetector.cpp  TeensyPortDetector.h
uart-serial-approach/: serial-latency-test-host.cpp  serial-latency-test-host.py  serial-sensor-to-actuator.cpp  serial-sensor-to-actuator.py
udp-mass-send-token-bucket/: TokenBucket.cpp  TokenBucket.hpp  TokenBucketConstantPrio.hpp  udp_mass_send_token_bucket.cpp
udp-send-token-bucket-clion/: CMakeLists.txt  TokenBucket.cpp  TokenBucket.hpp  TokenBucketPrioTest.cpp  TokenBucketPrioTest.hpp  udp_mass_send_token_bucket.cpp
udp-send-token-bucket-clion/CrossTraffic/: CrossTrafficSender.cpp  CrossTrafficSender.h
udp-send-token-bucket-clion/Logging/: CrossTrafficLogger.cpp  CrossTrafficLogger.h  LogTimepointEntry.cpp  LogTimepointEntry.h  Logger.cpp  Logger.h  PendulumLogTimepointEntry.cpp  PendulumLogTimepointEntry.h  PendulumLogger.cpp  PendulumLogger.h  StreamLogger.cpp  StreamLogger.h
udp-send-token-bucket-clion/Logging/LogEntries/: PendulumLogEntry.cpp
udp-send-token-bucket-clion/Logging/LogEntries/SchedulingInfoEntries/: TokenBucketInfoEntry.cpp  TokenBucketInfoEntry.h
udp-send-token-bucket-clion/PendulumReceiverSide/: PendulumReceiver.cpp  PendulumReceiver.h  PendulumReceiverMain.cpp
udp-send-token-bucket-clion/PendulumSenderSide/: PendulumMain.cpp  PendulumSender.cpp  PendulumSender.h  PendulumSenderMain.cpp
udp-send-token-bucket-clion/Scheduling/: TokenBucket.cpp
(+61 files in other folders)
