cmake_minimum_required(VERSION 3.22)
project(udp_send_token_bucket_clion)

set(CMAKE_CXX_STANDARD 17)

add_executable(udp_send_token_bucket_clion udp_mass_send_token_bucket.cpp TokenBucket.cpp TokenBucketPrioTest.hpp TokenBucketPrioTest.cpp)
add_executable(cross_traffic_host CrossTrafficHost.cpp TokenBucket.cpp TokenBucketPrioTest.hpp TokenBucketPrioTest.cpp)
add_executable(cross_traffic CrossTraffic/CrossTrafficSender.cpp CrossTraffic/CrossTrafficSender.h CrossTraffic/CrossTrafficSenderOrchestrator.cpp CrossTraffic/CrossTrafficSenderOrchestrator.h CrossTraffic/CrossTrafficMain.cpp TokenBucket.cpp TokenBucketPrioTest.hpp TokenBucketPrioTest.cpp Logging/StreamLogger.cpp Logging/StreamLogger.h Logging/LogTimepointEntry.cpp Logging/LogTimepointEntry.h nlohmann/json.hpp)

target_link_libraries(udp_send_token_bucket_clion sockpp)
target_link_libraries(udp_send_token_bucket_clion CppLinuxSerial)

target_link_libraries(cross_traffic_host sockpp)

target_link_libraries(cross_traffic sockpp)